@@ -1,6 +1,7 @@
 package assignment1;
 
 import java.awt.FlowLayout;
+import java.util.Collection;
 
 import javax.swing.JPanel;
 
@@ -11,21 +12,42 @@ import org.jfree.data.general.DefaultPieDataset;
 import org.jfree.data.general.PieDataset;
 import org.jfree.ui.ApplicationFrame;
 import org.jfree.ui.RefineryUtilities;
- 
+import java.util.List;
+import java.util.ArrayList;
+
+
+
 public class Graph extends ApplicationFrame {
    
-   public Graph( String title ) {
+	static List<String> countTitle = new ArrayList<String>();
+	static List<String> countResult = new ArrayList<String>();
+	static List<Integer> intCountResult = new ArrayList<Integer>();
+	
+   public Graph( List<String> countTitle, List<String> countResult, String title ) {
       super( title ); 
       setContentPane(createDemoPanel( ));
+      
+      this.countTitle = countTitle;
+      this.countResult = countResult;
    }
    
    private static PieDataset createDataset( ) {
-      DefaultPieDataset dataset = new DefaultPieDataset( );
-      dataset.setValue( "IPhone 5s" , new Double( 20 ) );  
-      dataset.setValue( "SamSung Grand" , new Double( 20 ) );   
-      dataset.setValue( "MotoG" , new Double( 60 ) );    
-      dataset.setValue( "Nokia Lumia" , new Double( 10 ) );  
-      return dataset;         
+	  
+	  int i;
+	   
+	  DefaultPieDataset dataset = new DefaultPieDataset( );
+	  
+	  System.out.println("Size" + countTitle.size());
+	   
+	  for(String x: countResult) intCountResult.add(Integer.valueOf(x));
+	  
+	  for(i=0; i < countTitle.size(); i++) {
+		  
+		  System.out.println(countTitle.get(i));
+		  dataset.setValue(countTitle.get(i) + "[" + i + "]", intCountResult.get(i));
+	  }
+	 
+	  return dataset;         
    }
    
    private static JFreeChart createChart( PieDataset dataset ) {
